# note

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/handlers/: auth.rs  home.rs  page.rs  user.rs
src/models/: pages.rs  types.rs  users.rs
templates/: auth.html  edit.html  error.html  home.html  page.html  user.html
templates/includes/: head.html
