[package]
name = "note"
version = "0.1.17"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
askama = { version = "0.14.0", features = ["full"] }
axum = "0.8.6"
axum-extra = { version = "0.12.0", features = ["cookie"] }
base64 = "0.22.1"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
redb = "3.1.0"
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.10.8"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["compression-deflate", "compression-gzip", "compression-zstd", "fs"] }
